Fix description text alignment: Change from right to left

--- a/src/components/common/SingleComponent.css
+++ b/src/components/common/SingleComponent.css
@@ -511,7 +511,7 @@ svg text {
 }
 
 .Results-descriptionText--right {
-  text-align: right;
+  text-align: left;
 }
 
 .Results-ctaText {
